# DupeSweep

./: CMakeLists.txt
include/dupesweep/: constants.h  types.h
src/: cli.cpp  cli.h  duplicate_detection.cpp  duplicate_detection.h  file_traversal.cpp  file_traversal.h  grouping.cpp  grouping.h  hashing.cpp  hashing.h  main.cpp
